syched remote with local

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OSIS/MPK SMP Taruna Bakti</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
@@ -101,43 +103,47 @@
     </section>
 
     <section id="visi">
-        <h2>VISI</h2>
-        <p>Menjadikan OSIS SMP Taruna Bakti sebagai wadah kreatif, inovatif, dan kolaboratif untuk mengembangkan potensi siswa, menyalurkan aspirasi, serta menciptakan lingkungan sekolah yang berkarakter, berprestasi, dan harmonis.</p>
+        <div id="visi-card">
+            <h2>- VISI -</h2>
+            <p>Menjadikan OSIS SMP Taruna Bakti sebagai wadah kreatif, inovatif, dan kolaboratif untuk mengembangkan potensi siswa, menyalurkan aspirasi, serta menciptakan lingkungan sekolah yang berkarakter, berprestasi, dan harmonis.</p>
+        </div>
     </section>
 
     <section id="misi">
-        <h2>MISI</h2>
+        <h2>- MISI -</h2>
         <ul class="misi-list">
             <li>
-                <h3 class="misi-card-title">Karakter & Kepemimpinan</h3>
+                <h3 class="misi-card-title"><i class="fa-solid fa-people-group"></i> Karakter & Kepemimpinan</h3>
                 <p class="misi-card-content">Menumbuhkan karakter disiplin, tanggung jawab, dan kepemimpinan siswa sesuai nilai Pancasila dan 7 Landasan Mental SMP Taruna Bakti</p>
             </li>
             <li>
-                <h3 class="misi-card-title">Jembatan Aspirasi</h3>
+                <h3 class="misi-card-title"><i class="fa-solid fa-comments"></i> Jembatan Aspirasi</h3>
                 <p class="misi-card-content">Menjadi jembatan aspirasi siswa dengan menciptakan ruang komunikasi yang terbuka, inklusif, dan kolaboratif</p>
             </li>
             <li>
-                <h3 class="misi-card-title">Proker Kreatif</h3>
+                <h3 class="misi-card-title"><i class="fa-solid fa-palette"></i> Proker Kreatif</h3>
                 <p class="misi-card-content">Menyelenggarakan program kerja yang kreatif dan bermanfaat untuk mengembangkan minat, bakat, serta prestasi siswa baik akademik maupun non-akademik</p>
             </li>
             <li>
-                <h3 class="misi-card-title">Budaya Kebersamaan</h3>
+                <h3 class="misi-card-title"><i class="fa-solid fa-handshake"></i> Budaya Kebersamaan</h3>
                 <p class="misi-card-content">Mendorong budaya kebersamaan, gotong royong, dan kepedulian sosial melalui kegiatan internal maupun pengabdian masyarakat</p>
             </li>
             <li>
-                <h3 class="misi-card-title">Lingkungan Inspiratif</h3>
+                <h3 class="misi-card-title"><i class="fa-solid fa-school"></i> Lingkungan Inspiratif</h3>
                 <p class="misi-card-content">Menciptakan lingkungan sekolah yang aman, nyaman, dan inspiratif dengan kerja sama harmonis antara siswa, guru, dan seluruh warga sekolah</p>
             </li>
         </ul>
     </section>
 
     <section id="proker">
-        <h2>PROGRAM KERJA</h2>
+        <h2>- PROGRAM KERJA -</h2>
         <p class="proker-intro">Program kerja unggulan OSIS/MPK SMP Taruna Bakti periode 2025-2026</p>
         <div class="proker-grid">
             <div class="proker-card">
                 <div class="proker-image">
-                    <img src="assets/images/proker-owlcast.jpg" alt="Owlcast">
+                    <a href="https://www.instagram.com/reel/DPsizn9k8l5/">
+                        <img src="assets/images/proker-owlcast.jpg" alt="Owlcast">
+                    </a>
                     <div class="proker-number">01</div>
                 </div>
                 <div class="proker-content">
