--- a/komisia.html
+++ b/komisia.html
@@ -84,69 +84,79 @@
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
         <h1>KOMISI A</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/MPK/komisia-logo.png" alt="Logo Komisi A SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisia/Azvhi Fachma Navhiza - Ketua komisi A.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Komisi A</div>
-                        <h2 class="struktur-organisasi-name">Avzhi Fachma N.</h2>
-                        <p class="struktur-organisasi-class">VIII-B</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisia/Nazma Caeli Ilanra Mara - Wakil komisi A.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Komisi A</div>
-                        <h2 class="struktur-organisasi-name">Nazma Caeli I.M.</h2>
-                        <p class="struktur-organisasi-class">VIII-A</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisia/Zafreen Jaydra Fernaisha 8bil1, anggota komisi A.jpg" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisia/Azvhi Fachma Navhiza - Ketua komisi A.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Komisi A</div>
+                            <h2 class="struktur-organisasi-name">Avzhi Fachma N.</h2>
+                            <p class="struktur-organisasi-class">VIII-B</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi A</div>
-                        <h2 class="struktur-organisasi-name">Zafreen Jaydra F.</h2>
-                        <p class="struktur-organisasi-class">VIII-BIL1</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisia/Andaru Wicaksono - Anggota Komisi A.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi A</div>
-                        <h2 class="struktur-organisasi-name">Andaru Wicaksono</h2>
-                        <p class="struktur-organisasi-class">VIII-F</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisia/Akira Adikara Damarprawirp - Angotta Komise A.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi A</div>
-                        <h2 class="struktur-organisasi-name">Akira Adikara D.</h2>
-                        <p class="struktur-organisasi-class">VII-BIL1</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisia/Nazma Caeli Ilanra Mara - Wakil komisi A.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Komisi A</div>
+                            <h2 class="struktur-organisasi-name">Nazma Caeli I.M.</h2>
+                            <p class="struktur-organisasi-class">VIII-A</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisia/Syareefa Atiqah Sabreen - Anggota Komisi A.png" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisia/Zafreen Jaydra Fernaisha 8bil1, anggota komisi A.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi A</div>
+                            <h2 class="struktur-organisasi-name">Zafreen Jaydra F.</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL1</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi A</div>
-                        <h2 class="struktur-organisasi-name">Syareefa Atiqah S.</h2>
-                        <p class="struktur-organisasi-class">VII-BIL1</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisia/Andaru Wicaksono - Anggota Komisi A.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi A</div>
+                            <h2 class="struktur-organisasi-name">Andaru Wicaksono</h2>
+                            <p class="struktur-organisasi-class">VIII-F</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisia/Akira Adikara Damarprawirp - Angotta Komise A.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi A</div>
+                            <h2 class="struktur-organisasi-name">Akira Adikara D.</h2>
+                            <p class="struktur-organisasi-class">VII-BIL1</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisia/Syareefa Atiqah Sabreen - Anggota Komisi A.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi A</div>
+                            <h2 class="struktur-organisasi-name">Syareefa Atiqah S.</h2>
+                            <p class="struktur-organisasi-class">VII-BIL1</p>
+                        </div>
                     </div>
                 </div>
             </div>
