--- a/komisib.html
+++ b/komisib.html
@@ -84,69 +84,79 @@
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
         <h1>KOMISI B</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/MPK/komisib-logo.png" alt="Logo Komisi B SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisib/Arianna Fathiya Hatta-Ketua Komisi B.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Komisi B</div>
-                        <h2 class="struktur-organisasi-name">Arianna Fathiya H.</h2>
-                        <p class="struktur-organisasi-class">VIII-BIL1</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisib/Ayla Syahira Fatisha Kamila-Wakil Komisi B.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Komisi B</div>
-                        <h2 class="struktur-organisasi-name">Ayla Syahira F.K.</h2>
-                        <p class="struktur-organisasi-class">VIII-BIL3</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisib/Bramantya Dwipramana Mutiyarsa-Anggota Komisi B.jpg" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisib/Arianna Fathiya Hatta-Ketua Komisi B.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Komisi B</div>
+                            <h2 class="struktur-organisasi-name">Arianna Fathiya H.</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL1</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi B</div>
-                        <h2 class="struktur-organisasi-name">Bramantya D.M.</h2>
-                        <p class="struktur-organisasi-class">VIII-E</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisib/Ghaziya Dianti Makkawaru-Anggota Komisi B.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi B</div>
-                        <h2 class="struktur-organisasi-name">Ghaziya Dianti M.</h2>
-                        <p class="struktur-organisasi-class">VIII-C</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisib/Danendra Putra Sulaiman - Anggota Komisi B (1).png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi B</div>
-                        <h2 class="struktur-organisasi-name">Danendra Putra S.</h2>
-                        <p class="struktur-organisasi-class">VII-A</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisib/Ayla Syahira Fatisha Kamila-Wakil Komisi B.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Komisi B</div>
+                            <h2 class="struktur-organisasi-name">Ayla Syahira F.K.</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL3</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisib/Nayla Shafiyya Ilham - Anggota komisi B.jpg" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisib/Bramantya Dwipramana Mutiyarsa-Anggota Komisi B.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi B</div>
+                            <h2 class="struktur-organisasi-name">Bramantya D.M.</h2>
+                            <p class="struktur-organisasi-class">VIII-E</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi B</div>
-                        <h2 class="struktur-organisasi-name">Nayla Shafiyya Ilham</h2>
-                        <p class="struktur-organisasi-class">VII-F</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisib/Ghaziya Dianti Makkawaru-Anggota Komisi B.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi B</div>
+                            <h2 class="struktur-organisasi-name">Ghaziya Dianti M.</h2>
+                            <p class="struktur-organisasi-class">VIII-C</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisib/Danendra Putra Sulaiman - Anggota Komisi B (1).png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi B</div>
+                            <h2 class="struktur-organisasi-name">Danendra Putra S.</h2>
+                            <p class="struktur-organisasi-class">VII-A</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisib/Nayla Shafiyya Ilham - Anggota komisi B.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi B</div>
+                            <h2 class="struktur-organisasi-name">Nayla Shafiyya Ilham</h2>
+                            <p class="struktur-organisasi-class">VII-F</p>
+                        </div>
                     </div>
                 </div>
             </div>
