--- a/komisic.html
+++ b/komisic.html
@@ -84,79 +84,89 @@
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
         <h1>KOMISI C</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/MPK/komisic-logo.png" alt="Logo Komisi C SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisic/Diandra Alexa Tumewu - Ketua komisi C.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Komisi C</div>
-                        <h2 class="struktur-organisasi-name">Diandra Alexa T.</h2>
-                        <p class="struktur-organisasi-class">VIII-BIL2</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisic/Allysha Zhafira Baraqbah - wakil komisi c.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Komisi C</div>
-                        <h2 class="struktur-organisasi-name">Allysha Zhafira B.</h2>
-                        <p class="struktur-organisasi-class">VIII-F</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisic/Sierra Aqilla Purdian - anggota komisi C.png" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisic/Diandra Alexa Tumewu - Ketua komisi C.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Komisi C</div>
+                            <h2 class="struktur-organisasi-name">Diandra Alexa T.</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL2</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi C</div>
-                        <h2 class="struktur-organisasi-name">Sierra Aqilla Purdian</h2>
-                        <p class="struktur-organisasi-class">VIII-BIL2</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisic/Siti Riztria Syarafana Namiah-Anggota Komisi C.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi C</div>
-                        <h2 class="struktur-organisasi-name">Siti Riztria S. Namiah</h2>
-                        <p class="struktur-organisasi-class">VIII-BIL3</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisic/Medina Zaheen Muchtar - Anggota Komisi C.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi C</div>
-                        <h2 class="struktur-organisasi-name">Medina Zaheen M.</h2>
-                        <p class="struktur-organisasi-class">VII-A</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisic/Allysha Zhafira Baraqbah - wakil komisi c.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Komisi C</div>
+                            <h2 class="struktur-organisasi-name">Allysha Zhafira B.</h2>
+                            <p class="struktur-organisasi-class">VIII-F</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisic/Basheer Othman - Anggota Komisi C.jpg" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisic/Sierra Aqilla Purdian - anggota komisi C.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi C</div>
+                            <h2 class="struktur-organisasi-name">Sierra Aqilla Purdian</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL2</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi C</div>
-                        <h2 class="struktur-organisasi-name">Basheer Othman</h2>
-                        <p class="struktur-organisasi-class">VII-G</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisic/Siti Riztria Syarafana Namiah-Anggota Komisi C.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi C</div>
+                            <h2 class="struktur-organisasi-name">Siti Riztria S. Namiah</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL3</p>
+                        </div>
                     </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisic/Kanaka Maisadipta Suseno - Anggota_.jpg" alt="Student Photo">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisic/Medina Zaheen Muchtar - Anggota Komisi C.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi C</div>
+                            <h2 class="struktur-organisasi-name">Medina Zaheen M.</h2>
+                            <p class="struktur-organisasi-class">VII-A</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi C</div>
-                        <h2 class="struktur-organisasi-name">Kanaka M.S.</h2>
-                        <p class="struktur-organisasi-class">VII-B</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisic/Basheer Othman - Anggota Komisi C.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi C</div>
+                            <h2 class="struktur-organisasi-name">Basheer Othman</h2>
+                            <p class="struktur-organisasi-class">VII-G</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisic/Kanaka Maisadipta Suseno - Anggota_.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi C</div>
+                            <h2 class="struktur-organisasi-name">Kanaka M.S.</h2>
+                            <p class="struktur-organisasi-class">VII-B</p>
+                        </div>
                     </div>
                 </div>
             </div>
