--- a/komisid.html
+++ b/komisid.html
@@ -83,80 +83,90 @@
     <div class="gradient-circle gradient-top-left"></div>
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
-        <h1>KOMISI D</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
-                <img class="struktur-organisasi-logo" src="assets/images/MPK/komisid-logo.png" alt="Logo Komisi D SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisid/Mohammad Azzam Rafiandra -Ketua komisi D.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Komisi D</div>
-                        <h2 class="struktur-organisasi-name">Mohammad Azzam R.</h2>
-                        <p class="struktur-organisasi-class">VIII-E</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisid/Pranaja Rasya Yogantara - Wakil Ketua Komisi D.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Komisi D</div>
-                        <h2 class="struktur-organisasi-name">Pranaja Rasya Y.</h2>
-                        <p class="struktur-organisasi-class">VIII-B</p>
-                    </div>
+        <h1>KOMISI E</h1>
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
+                <img class="struktur-organisasi-logo" src="assets/images/MPK/komisie-logo.png" alt="Logo Komisi E SMP Taruna Bakti">
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisid/kaili labeneamata .p.-anggota komisi D.jpg" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Reginna Ayu Tirtaputri - Ketua Komisi E.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Reginna Ayu T.</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL3</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi D</div>
-                        <h2 class="struktur-organisasi-name">Kaili Labeneamata P.</h2>
-                        <p class="struktur-organisasi-class">VII-D</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisid/Mikayla Danish Rayyana Anggota Komisi D.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi D</div>
-                        <h2 class="struktur-organisasi-name">Mikayla Danish R.</h2>
-                        <p class="struktur-organisasi-class">VII-E</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisid/Shahira Edlyn Pasciolly- Anggota Komisi D.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi D</div>
-                        <h2 class="struktur-organisasi-name">Shahira Edlyn P.</h2>
-                        <p class="struktur-organisasi-class">VII-B</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Muhammad alaric zukhruf - wakil komisi e_.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Muhammad Alaric Z.</h2>
+                            <p class="struktur-organisasi-class">VIII-C</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisid/Zaira Filzah Widilestari – Anggota Komisi D.jpg" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Meisya humaira gunawan-anggota komisi E.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Meisya Humaira G.</h2>
+                            <p class="struktur-organisasi-class">VIII-D</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi D</div>
-                        <h2 class="struktur-organisasi-name">Zaira Filzah W.</h2>
-                        <p class="struktur-organisasi-class">VII-C</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Savina Adinda Ramadhani-Anggota komisi E.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Savina Adinda R.</h2>
+                            <p class="struktur-organisasi-class">VII-G</p>
+                        </div>
                     </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisid/Callysta Kurnia Maharani - Anggota Komisi D.jpg" alt="Student Photo">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Shandy Putri Aryan Jaya - Anggota Komisi E.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Shandy Putri Aryan J.</h2>
+                            <p class="struktur-organisasi-class">VII-F</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi D</div>
-                        <h2 class="struktur-organisasi-name">Callysta Kurnia M.</h2>
-                        <p class="struktur-organisasi-class">VII-C</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Renggani Nawangsidi - Anggota komisi e.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Renggani Nawangsidi</h2>
+                            <p class="struktur-organisasi-class">VII-BIL2</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Khairunissa Badzlin - Anggota Komisi E.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Khairunissa Badzlin</h2>
+                            <p class="struktur-organisasi-class">VII-D</p>
+                        </div>
                     </div>
                 </div>
             </div>
