--- a/komisie.html
+++ b/komisie.html
@@ -84,79 +84,89 @@
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
         <h1>KOMISI E</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/MPK/komisie-logo.png" alt="Logo Komisi E SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisie/Reginna Ayu Tirtaputri - Ketua Komisi E.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Komisi E</div>
-                        <h2 class="struktur-organisasi-name">Reginna Ayu T.</h2>
-                        <p class="struktur-organisasi-class">VIII-BIL3</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisie/Muhammad alaric zukhruf - wakil komisi e_.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Komisi E</div>
-                        <h2 class="struktur-organisasi-name">Muhammad Alaric Z.</h2>
-                        <p class="struktur-organisasi-class">VIII-C</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisie/Meisya humaira gunawan-anggota komisi E.jpg" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Reginna Ayu Tirtaputri - Ketua Komisi E.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Reginna Ayu T.</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL3</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi E</div>
-                        <h2 class="struktur-organisasi-name">Meisya Humaira G.</h2>
-                        <p class="struktur-organisasi-class">VIII-D</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisie/Savina Adinda Ramadhani-Anggota komisi E.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi E</div>
-                        <h2 class="struktur-organisasi-name">Savina Adinda R.</h2>
-                        <p class="struktur-organisasi-class">VII-G</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisie/Shandy Putri Aryan Jaya - Anggota Komisi E.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi E</div>
-                        <h2 class="struktur-organisasi-name">Shandy Putri Aryan J.</h2>
-                        <p class="struktur-organisasi-class">VII-F</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Muhammad alaric zukhruf - wakil komisi e_.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Muhammad Alaric Z.</h2>
+                            <p class="struktur-organisasi-class">VIII-C</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisie/Renggani Nawangsidi - Anggota komisi e.jpg" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Meisya humaira gunawan-anggota komisi E.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Meisya Humaira G.</h2>
+                            <p class="struktur-organisasi-class">VIII-D</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi E</div>
-                        <h2 class="struktur-organisasi-name">Renggani Nawangsidi</h2>
-                        <p class="struktur-organisasi-class">VII-BIL2</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Savina Adinda Ramadhani-Anggota komisi E.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Savina Adinda R.</h2>
+                            <p class="struktur-organisasi-class">VII-G</p>
+                        </div>
                     </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/MPK/komisie/Khairunissa Badzlin - Anggota Komisi E.jpg" alt="Student Photo">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Shandy Putri Aryan Jaya - Anggota Komisi E.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Shandy Putri Aryan J.</h2>
+                            <p class="struktur-organisasi-class">VII-F</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Komisi E</div>
-                        <h2 class="struktur-organisasi-name">Khairunissa Badzlin</h2>
-                        <p class="struktur-organisasi-class">VII-D</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Renggani Nawangsidi - Anggota komisi e.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Renggani Nawangsidi</h2>
+                            <p class="struktur-organisasi-class">VII-BIL2</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/MPK/komisie/Khairunissa Badzlin - Anggota Komisi E.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Komisi E</div>
+                            <h2 class="struktur-organisasi-name">Khairunissa Badzlin</h2>
+                            <p class="struktur-organisasi-class">VII-D</p>
+                        </div>
                     </div>
                 </div>
             </div>
