--- a/sekbid1.html
+++ b/sekbid1.html
@@ -83,60 +83,74 @@
     <div class="gradient-circle gradient-top-left"></div>
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
-        <h1>SEKBID 1</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <h1>SEKBID 1 - Ketuhanan</h1>
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/OSIS/sekbid1-logo.png" alt="Logo Sekbid 1 SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid1/IMG-20251025-WA0016.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Sekbid 1</div>
-                        <h2 class="struktur-organisasi-name">I Gde Rajawidya Y.</h2>
-                        <p class="struktur-organisasi-class">VIII-A</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid1/8A_Clara Gracella Souhoka_Wakil Sekbid 1.jpeg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 1</div>
-                        <h2 class="struktur-organisasi-name">Clara Gracella S.</h2>
-                        <p class="struktur-organisasi-class">VIII-A</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li><strong>Retret Keagamaan</strong> - Kegiatan ibadah yang dilakukan oleh umat Hindu dan Kristen di luar lingkungan sekolah dengan tujuan untuk memperdalam keimanan dan mempererat hubungan antar peserta.</li>
+                        <li><strong>Satgas Ibadah Siang</strong> - Program yang diadakan untuk menertibkan dan melancarkan kegiatan ibadah siang. Satgas Ibadah Siang dilaksanakan oleh anggota OSIS dan MPK dengan dibaginya 4 kelompok.</li>
+                        <li><strong>Buka Bersama dengan Anak Panti Asuhan dan Siswa</strong> - Buka bersama dengan anak panti dan buka bersama seluruh anggota OSIS/MPK dilakukan saat hari raya ramadhan dengan menyediakan konsumsi untuk anak panti.</li>
+                        <li><strong>Acara Keagaam serta Lomba</strong> - Kegiatan hari raya Ramadhan, Maulid Nabi, Qurban, Paskah, Natal dan Dharma Shanti dengan mengadakan lomba keagamaan.</li>
+                        <li><strong>Membersihkan Mushola</strong> - Membersihkan mushola untuk menjaga kebersihan dan kerapian tempat ibadah agar tetap bersih dan nyaman digunakan. Kegiatan ini dilaksanakan dengan kerja sama sekbid 2.</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid1/7B-Mars Khagendra Jodi_anggota sekbid 1.jpg" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid1/IMG-20251025-WA0016.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Sekbid 1</div>
+                            <h2 class="struktur-organisasi-name">I Gde Rajawidya Y.</h2>
+                            <p class="struktur-organisasi-class">VIII-A</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 1</div>
-                        <h2 class="struktur-organisasi-name">Mars Khagendra Jodi</h2>
-                        <p class="struktur-organisasi-class">VII-B</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid1/8A_Clara Gracella Souhoka_Wakil Sekbid 1.jpeg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 1</div>
+                            <h2 class="struktur-organisasi-name">Clara Gracella S.</h2>
+                            <p class="struktur-organisasi-class">VIII-A</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid1/7G_Kenzie Ray Akbar_sekbid 1.jpg" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid1/7B-Mars Khagendra Jodi_anggota sekbid 1.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 1</div>
+                            <h2 class="struktur-organisasi-name">Mars Khagendra Jodi</h2>
+                            <p class="struktur-organisasi-class">VII-B</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 1</div>
-                        <h2 class="struktur-organisasi-name">Kenzie Ray Akbar</h2>
-                        <p class="struktur-organisasi-class">VII-G</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid1/7G_Kenzie Ray Akbar_sekbid 1.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 1</div>
+                            <h2 class="struktur-organisasi-name">Kenzie Ray Akbar</h2>
+                            <p class="struktur-organisasi-class">VII-G</p>
+                        </div>
                     </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid1/7B-Muhammad Rayyan Faeyza_ Anggota Sekbid 1.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 1</div>
-                        <h2 class="struktur-organisasi-name">Muhammad Rayyan F.</h2>
-                        <p class="struktur-organisasi-class">VII-B</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid1/7B-Muhammad Rayyan Faeyza_ Anggota Sekbid 1.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 1</div>
+                            <h2 class="struktur-organisasi-name">Muhammad Rayyan F.</h2>
+                            <p class="struktur-organisasi-class">VII-B</p>
+                        </div>
                     </div>
                 </div>
             </div>
