--- a/sekbid2.html
+++ b/sekbid2.html
@@ -83,70 +83,83 @@
     <div class="gradient-circle gradient-top-left"></div>
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
-        <h1>SEKBID 2</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <h1>SEKBID 2 - Budi Pekerti</h1>
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/OSIS/sekbid2-logo.png" alt="Logo Sekbid 2 SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid2/8B_Nagata Kelana Pradipa_Ketua Sekbid 2.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Sekbid 2</div>
-                        <h2 class="struktur-organisasi-name">Nagata Kelana P.</h2>
-                        <p class="struktur-organisasi-class">VIII-B</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid2/8B_Anargha Gandira Prabayasa_Wakil Ketua sekbid 2.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 2</div>
-                        <h2 class="struktur-organisasi-name">Anargha Gandira P.</h2>
-                        <p class="struktur-organisasi-class">VIII-B</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li><strong>Satgas Keterlambatan</strong> - Proker yang betujuan untuk mencatat siswa/i yang terlambat, serta mengecek kelangkapan atributnya, dilaksanakan dari jam 06.35-7.15 dan standby di berbagai pintu masuk Gedung Taruna Bakti.</li>
+                        <li><strong>Bakti Sosial</strong> - Memberi sembako, melakukan buka bersama dengan anak-anak yang berada di panti asuhan, dan juga memberi sumbangan kepada warga SMP Taruna Bakti yang telah terkena musibah.</li>
+                        <li><strong>Membersihkan Mushola</strong> - Membuat mushola sebagai tempat ibadah yang bersih dan nyaman untuk digunakan, serta mempererat hubungan dan kerjasama antar anggota sekbid 1 dan 2.</li>
+                        <li><strong>Lomba Membuat Poster Tentang Kesopanan & Tatakrama Siswa/i di Sekitar Lingkungan Sekolah</strong> - Proker yang bertujuan untuk mengingatkan siswa-siswi cara bersopan santun di sekitaran lingkungan sekolah. Proker ini akan ditempatkan di acara-acara peringatan tertentu.</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid2/8E_Muhammad Hagan S._Anggota sekbid 2.png" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid2/8B_Nagata Kelana Pradipa_Ketua Sekbid 2.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Sekbid 2</div>
+                            <h2 class="struktur-organisasi-name">Nagata Kelana P.</h2>
+                            <p class="struktur-organisasi-class">VIII-B</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 2</div>
-                        <h2 class="struktur-organisasi-name">Muhammad Hagan S.</h2>
-                        <p class="struktur-organisasi-class">VIII-E</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid2/8F_Cyltania Adyara M_Anggota sekbid 2.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 2</div>
-                        <h2 class="struktur-organisasi-name">Cyltania Adyara M.</h2>
-                        <p class="struktur-organisasi-class">VIII-F</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid2/7BIL2_Dainang Duma N.P._Anggota Sekbid 2.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 2</div>
-                        <h2 class="struktur-organisasi-name">Dainang Duma N.P.</h2>
-                        <p class="struktur-organisasi-class">VII-BIL2</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid2/8B_Anargha Gandira Prabayasa_Wakil Ketua sekbid 2.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 2</div>
+                            <h2 class="struktur-organisasi-name">Anargha Gandira P.</h2>
+                            <p class="struktur-organisasi-class">VIII-B</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid2/7Bil2_Kin Narumi A_Anggota.jpg" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid2/8E_Muhammad Hagan S._Anggota sekbid 2.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 2</div>
+                            <h2 class="struktur-organisasi-name">Muhammad Hagan S.</h2>
+                            <p class="struktur-organisasi-class">VIII-E</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 2</div>
-                        <h2 class="struktur-organisasi-name">Kin Narumi A.</h2>
-                        <p class="struktur-organisasi-class">VII-BIL2</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid2/8F_Cyltania Adyara M_Anggota sekbid 2.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 2</div>
+                            <h2 class="struktur-organisasi-name">Cyltania Adyara M.</h2>
+                            <p class="struktur-organisasi-class">VIII-F</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid2/7BIL2_Dainang Duma N.P._Anggota Sekbid 2.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 2</div>
+                            <h2 class="struktur-organisasi-name">Dainang Duma N.P.</h2>
+                            <p class="struktur-organisasi-class">VII-BIL2</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid2/7Bil2_Kin Narumi A_Anggota.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 2</div>
+                            <h2 class="struktur-organisasi-name">Kin Narumi A.</h2>
+                            <p class="struktur-organisasi-class">VII-BIL2</p>
+                        </div>
                     </div>
                 </div>
             </div>
