--- a/sekbid3.html
+++ b/sekbid3.html
@@ -83,60 +83,78 @@
     <div class="gradient-circle gradient-top-left"></div>
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
-        <h1>SEKBID 3</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <h1>SEKBID 3 - Bela Negara</h1>
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/OSIS/sekbid3-logo.png" alt="Logo Sekbid 3 SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid3/8B_Alika Zara Pramudita_Ketua Sekbid 3.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Sekbid 3</div>
-                        <h2 class="struktur-organisasi-name">Alika Zara Pramudita</h2>
-                        <p class="struktur-organisasi-class">VIII-B</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid3/8D_Kayla Marsya_Wakil Ketua Sekbid 3.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 3</div>
-                        <h2 class="struktur-organisasi-name">Kayla Marsya</h2>
-                        <p class="struktur-organisasi-class">VIII-D</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li><strong>Satgas Kebersihan</strong> - Suatu program untuk memeriksa kondisi kebersihan kelas SMP Taruna Bakti. Setiap hari, petugas akan memeriksa kelas yang telah ditetapkan dan mengisi g-form laporan kebersihan.</li>
+                        <li><strong>Satgas Cleaning Time</strong> -  Program yang bertujuan untuk memeriksa kondisi kebersihan setiap kelas pada saat jam cleaning time.</li>
+                        <li><strong>Hari Kartini</strong> - Acara yang berisi lomba-lomba dengan tema untuk menghargai jasa Ibu Kartini, contohnya seperti lomba membaca puisi, lomba menulis essay, dan lain sebagainya.</li>
+                        <li><strong>Hari Pendidikan Nasional</strong> - Sebuah acara yang berisi lomba-lomba yang berkaitan dengan pendidikan, contohnya seperti lomba ranking 1, pidato, dan lain sebagainya.</li>
+                        <li><strong>Hari Sumpah Pemuda</strong> - Suatu kegiatan yang berisi lomba-lomba serta akan ada materi dari narasumber. </li>
+                        <li><strong>Lomba Kebersihan Kelas</strong> - Setiap bulan akan diadakan lomba kebersihan kelas. Pemenang akan diumumkan saat upacara bendera/apel atau pada saat pembagian hadiah lomba, serta diberikan sebuah penghargaan sebagai bentuk apresiasi.</li>
+                        <li><strong>Pagi Gembira</strong> - Suatu acara untuk memperingati hari kemerdekaan Indonesia yang diisi oleh lomba-lomba seperti lomba makan kerupuk, tarik tambang, dan lain sebagainya.</li>
+                        <li><strong>LDKS</strong> - Sebuah acara yang dapat meningkatkan jiwa kepemimpinan siswa, dengan cara mengadakan PBB, dan kegiatan lainnya. Kegiatan ini diikuti oleh seluruh kelas 7 serta beberapa siswa kelas 8 yang ingin menjadi pengurus OSIS/MPK.</li>
+                        <li><strong>Upacara Bendera/Apel</strong> - Kegiatan yang dilaksanakan setiap bulannya pada tanggal 17. Kegiatan ini biasanya ditetapkan sebagai pembuka acara yang telah diselenggarakan oleh OSIS-MPK.</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid3/8F_Jabbar Mahajana Tama_Pengurus Sekbid 3.jpg" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid3/8B_Alika Zara Pramudita_Ketua Sekbid 3.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Sekbid 3</div>
+                            <h2 class="struktur-organisasi-name">Alika Zara Pramudita</h2>
+                            <p class="struktur-organisasi-class">VIII-B</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 3</div>
-                        <h2 class="struktur-organisasi-name">Jabbar Mahajana T.</h2>
-                        <p class="struktur-organisasi-class">VIII-F</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid3/8D_Kayla Marsya_Wakil Ketua Sekbid 3.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 3</div>
+                            <h2 class="struktur-organisasi-name">Kayla Marsya</h2>
+                            <p class="struktur-organisasi-class">VIII-D</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid3/7A-Renata Faaiza Siddiq-Sekbid 3.jpg" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid3/8F_Jabbar Mahajana Tama_Pengurus Sekbid 3.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 3</div>
+                            <h2 class="struktur-organisasi-name">Jabbar Mahajana T.</h2>
+                            <p class="struktur-organisasi-class">VIII-F</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 3</div>
-                        <h2 class="struktur-organisasi-name">Renata Faaiza Siddiq</h2>
-                        <p class="struktur-organisasi-class">VII-A</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid3/7A-Renata Faaiza Siddiq-Sekbid 3.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 3</div>
+                            <h2 class="struktur-organisasi-name">Renata Faaiza Siddiq</h2>
+                            <p class="struktur-organisasi-class">VII-A</p>
+                        </div>
                     </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid3/7D_M.Jibril Ar Raffa_ anggota sekbid 3.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 3</div>
-                        <h2 class="struktur-organisasi-name">M.Jibril Ar Raffa</h2>
-                        <p class="struktur-organisasi-class">VII-D</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid3/7D_M.Jibril Ar Raffa_ anggota sekbid 3.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 3</div>
+                            <h2 class="struktur-organisasi-name">M.Jibril Ar Raffa</h2>
+                            <p class="struktur-organisasi-class">VII-D</p>
+                        </div>
                     </div>
                 </div>
             </div>
