--- a/sekbid4.html
+++ b/sekbid4.html
@@ -83,70 +83,83 @@
     <div class="gradient-circle gradient-top-left"></div>
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
-        <h1>SEKBID 4</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <h1>SEKBID 4 - Prestasi dan Olahraga</h1>
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/OSIS/sekbid4-logo.png" alt="Logo Sekbid 4 SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid4/8D_Nadya Levana Putri Michael_Ketua Sekbid 4.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Sekbid 4</div>
-                        <h2 class="struktur-organisasi-name">Nadya Levana P.M.</h2>
-                        <p class="struktur-organisasi-class">VIII-D</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid4/8E_Muhammad Afif Anindya Farras_Wakil Ketua.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 4</div>
-                        <h2 class="struktur-organisasi-name">Muhammad Afif A.F.</h2>
-                        <p class="struktur-organisasi-class">VIII-E</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li><strong>PORAK</strong> - Pekan olahraga kreativitas antar kelas dengan mengadakan lomba lomba kecil seperti,basket 3x3, penalti, dsb.</li>
+                        <li><strong>TB Cup</strong> - Event besar SMP Taruna Bakti yang mengajak siswa siswi dari Sekolah lain untuk mengikuti perlombaan olahraga  seperti Basket 5x5, Futsal, dan E-sport.</li>
+                        <li><strong>Kegiatan Sekolah Sehat</strong> - Kegiatan  dimana para  siswa  siswi SMP  Taruna  Bakti  melakukan  hal-hal yang  berhubungan  dengan  kesehatan  dan  kebugaran jasmani.</li>
+                        <li><strong>Cerita Juara</strong> - Program sebulan sekali dengan mengundang  para  siswa  siswi  yang  berprestasi untuk  melakukan  wawancara  singkat  tentang pengalaman mereka selama mengikuti kompetisi. Video akan diupload di medsos resmi OSISMPK SMP Taruna Bakti.</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid4/8bil2_Zivara Rafranzani A._Anggota sekbit 4.png" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid4/8D_Nadya Levana Putri Michael_Ketua Sekbid 4.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Sekbid 4</div>
+                            <h2 class="struktur-organisasi-name">Nadya Levana P.M.</h2>
+                            <p class="struktur-organisasi-class">VIII-D</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 4</div>
-                        <h2 class="struktur-organisasi-name">Zivara Rafranzani A.</h2>
-                        <p class="struktur-organisasi-class">VIII-BIL2</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid4/7bil1_Sabian_Anggota sekbid 4.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 4</div>
-                        <h2 class="struktur-organisasi-name">Sabian Aqmar M.</h2>
-                        <p class="struktur-organisasi-class">VII-BIL1</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid4/7e_PutuRanwirAbhinava_anggotasegbid4.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 4</div>
-                        <h2 class="struktur-organisasi-name">Putu Ranwir A.</h2>
-                        <p class="struktur-organisasi-class">VII-E</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid4/8E_Muhammad Afif Anindya Farras_Wakil Ketua.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 4</div>
+                            <h2 class="struktur-organisasi-name">Muhammad Afif A.F.</h2>
+                            <p class="struktur-organisasi-class">VIII-E</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid4/7C_Adelia Maritza T._ Anggota Sekbid 4_.png" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid4/8bil2_Zivara Rafranzani A._Anggota sekbit 4.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 4</div>
+                            <h2 class="struktur-organisasi-name">Zivara Rafranzani A.</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL2</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 4</div>
-                        <h2 class="struktur-organisasi-name">Adelia Maritza T.</h2>
-                        <p class="struktur-organisasi-class">VII-C</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid4/7bil1_Sabian_Anggota sekbid 4.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 4</div>
+                            <h2 class="struktur-organisasi-name">Sabian Aqmar M.</h2>
+                            <p class="struktur-organisasi-class">VII-BIL1</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid4/7e_PutuRanwirAbhinava_anggotasegbid4.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 4</div>
+                            <h2 class="struktur-organisasi-name">Putu Ranwir A.</h2>
+                            <p class="struktur-organisasi-class">VII-E</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid4/7C_Adelia Maritza T._ Anggota Sekbid 4_.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 4</div>
+                            <h2 class="struktur-organisasi-name">Adelia Maritza T.</h2>
+                            <p class="struktur-organisasi-class">VII-C</p>
+                        </div>
                     </div>
                 </div>
             </div>
