--- a/sekbid5.html
+++ b/sekbid5.html
@@ -83,70 +83,85 @@
     <div class="gradient-circle gradient-top-left"></div>
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
-        <h1>SEKBID 5</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <h1>SEKBID 5 - Demokrasi dan HAM</h1>
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/OSIS/sekbid5-logo.png" alt="Logo Sekbid 5 SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid5/8A_Almira Ruby Nacita_Ketua Sekbid 5.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Sekbid 5</div>
-                        <h2 class="struktur-organisasi-name">Almira Ruby Nacita</h2>
-                        <p class="struktur-organisasi-class">VIII-A</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid5/8C_Kenzie Athaya P._Wakil Ketua Sekbid 5.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 5</div>
-                        <h2 class="struktur-organisasi-name">Kenzie Athaya P.</h2>
-                        <p class="struktur-organisasi-class">VIII-C</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li><strong>Satgas Anti-Bullying</strong> - Setiap kelas terdapat OSIS dan MPK yang mencatat siswa-siswa yang membully di kelas masing-masing. Lalu melaporkan catatan tersebut ke google form.</li>
+                        <li><strong>Lomba Kebersihan Kelas</strong> - Setiap bulan akan diadakan lomba kebersihan kelas. Pemenang akan diumumkan setiap upacara bendera/apel atau pada saat pembagian hadiah lomba, serta diberikan sebuah penghargaan sebagai bentuk apresiasi.</li>
+                        <li><strong>QR Code Poster</strong> - Akan diadakan poster yang tersedia QR Code yang bisa di scan oleh siswa-siswi Taruna Bakti. Jika mereka ingin curhat, maka mereka boleh untuk mengscan QR code yang berada di poster tersebut.</li>
+                        <li><strong>TarbakCare</strong> - Kegiatan Bakti Sosial, kegiatannnya kita datang dan mengasih bantuan ke sekolah, panti, atau ke orang jalanan. Lalu kita disana mengasih bansos atau mengasi bingkisan.</li>
+                        <li><strong>Hari Guru</strong> - Acara yang diadakan setiap tahun pada tanggal 5 Oktober, yang biasanya diadakan lomba, seperti lomba video ucapan,lomba menulis dan membaca puisi, dll.</li>
+                        <li><strong>Video Anti-Bullying</strong> - Pembuatan video kampanye untuk meningkatkan kesadaran siswa tentang pentingnya mencegah tindakan perundungan di lingkungan sekolah. Video akan diunggah pada akun instagram OSISMPK.</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid5/8E_Tristan Keanu W._Anggota Sekbid 5.jpg" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid5/8A_Almira Ruby Nacita_Ketua Sekbid 5.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Sekbid 5</div>
+                            <h2 class="struktur-organisasi-name">Almira Ruby Nacita</h2>
+                            <p class="struktur-organisasi-class">VIII-A</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 4</div>
-                        <h2 class="struktur-organisasi-name">Tristan Keanu W.</h2>
-                        <p class="struktur-organisasi-class">VIII-E</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid5/7B-SherenityGraciella-AnggotaSekbid5.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 4</div>
-                        <h2 class="struktur-organisasi-name">Sherenity Graciella C.K.</h2>
-                        <p class="struktur-organisasi-class">VII-B</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid5/7D_Zytka Alaia A_ anggota sekbid 5.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 5</div>
-                        <h2 class="struktur-organisasi-name">Zytka Alaia A.</h2>
-                        <p class="struktur-organisasi-class">VII-D</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid5/8C_Kenzie Athaya P._Wakil Ketua Sekbid 5.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 5</div>
+                            <h2 class="struktur-organisasi-name">Kenzie Athaya P.</h2>
+                            <p class="struktur-organisasi-class">VIII-C</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid5/7A_Ratu Nareswari R._Anggota Sekbid 5.jpg" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid5/8E_Tristan Keanu W._Anggota Sekbid 5.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 5</div>
+                            <h2 class="struktur-organisasi-name">Tristan Keanu W.</h2>
+                            <p class="struktur-organisasi-class">VIII-E</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 5</div>
-                        <h2 class="struktur-organisasi-name">Ratu Nareswari R.</h2>
-                        <p class="struktur-organisasi-class">VII-A</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid5/7B-SherenityGraciella-AnggotaSekbid5.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 5</div>
+                            <h2 class="struktur-organisasi-name">Sherenity Graciella C.K.</h2>
+                            <p class="struktur-organisasi-class">VII-B</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid5/7D_Zytka Alaia A_ anggota sekbid 5.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 5</div>
+                            <h2 class="struktur-organisasi-name">Zytka Alaia A.</h2>
+                            <p class="struktur-organisasi-class">VII-D</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid5/7A_Ratu Nareswari R._Anggota Sekbid 5.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 5</div>
+                            <h2 class="struktur-organisasi-name">Ratu Nareswari R.</h2>
+                            <p class="struktur-organisasi-class">VII-A</p>
+                        </div>
                     </div>
                 </div>
             </div>
