--- a/sekbid6.html
+++ b/sekbid6.html
@@ -83,70 +83,83 @@
     <div class="gradient-circle gradient-top-left"></div>
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
-        <h1>SEKBID 6</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <h1>SEKBID 6 - Kreativitas dan Kewirausahaan</h1>
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/OSIS/sekbid6-logo.png" alt="Logo Sekbid 6 SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid6/8F_Nindya Vaishali P.G._Ketua Sekbid 6.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Sekbid 6</div>
-                        <h2 class="struktur-organisasi-name">Nindya Vaishali P.G.</h2>
-                        <p class="struktur-organisasi-class">VIII-F</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid6/vadya.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 6</div>
-                        <h2 class="struktur-organisasi-name">Vadya Astarina P.H.</h2>
-                        <p class="struktur-organisasi-class">VIII-A</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li><strong>Satgas Keputrian</strong> - Program khusus bagi siswi yang sedang berhalangan agar tetap mendapatkan pembelajaran bermakna di luar kegiatan ibadah. Kegiatan berisi diskusi, pembinaan akhlak, dan pengembangan karakter perempuan.</li>
+                        <li><strong>Kantin OSIS</strong> - Kegiatan kewirausahaan yang dikelola langsung oleh OSIS, di mana anggota OSIS berperan sebagai pelaksana sekaligus penjual produk pada momen-momen tertentu di sekolah.</li>
+                        <li><strong>Charity Sosial</strong> - Kegiatan sosial yang bertujuan untuk mengumpulkan barang-barang layak pakai, seperti pakaian, alat tulis, dan kebutuhan pokok. Barang-barang tersebut kemudian disalurkan kepada pihak-pihak yang membutuhkan.</li>
+                        <li><strong>Showcase Digital</strong> - Program lomba video kreatif yang ditujukan bagi siswa SMP Taruna Bakti sebagai wadah untuk menampilkan kreativitas dan keterampilan mereka dalam bentuk konten digital.</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid6/8B_AnandhivaAssheriya_AnggotaSekbid6.jpg" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid6/8F_Nindya Vaishali P.G._Ketua Sekbid 6.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Sekbid 6</div>
+                            <h2 class="struktur-organisasi-name">Nindya Vaishali P.G.</h2>
+                            <p class="struktur-organisasi-class">VIII-F</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 6</div>
-                        <h2 class="struktur-organisasi-name">Anandhiva Assheriya B.P.K.</h2>
-                        <p class="struktur-organisasi-class">VIII-B</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid6/7Bil1_Made Dravin A. N. _Anggota Sekbid 6.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 6</div>
-                        <h2 class="struktur-organisasi-name">Made Dravin A.N.</h2>
-                        <p class="struktur-organisasi-class">VII-BIL1</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid6/7F_Lakeisha Kataleya A._anggota sekbid 6.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 6</div>
-                        <h2 class="struktur-organisasi-name">Lakeisha Kataleya A.</h2>
-                        <p class="struktur-organisasi-class">VII-F</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid6/vadya.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 6</div>
+                            <h2 class="struktur-organisasi-name">Vadya Astarina P.H.</h2>
+                            <p class="struktur-organisasi-class">VIII-A</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid6/7BIL2_Kama Arrumi Jose_Anggota Sekbid 6.png" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid6/8B_AnandhivaAssheriya_AnggotaSekbid6.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 6</div>
+                            <h2 class="struktur-organisasi-name">Anandhiva Assheriya B.P.K.</h2>
+                            <p class="struktur-organisasi-class">VIII-B</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 6</div>
-                        <h2 class="struktur-organisasi-name">Kama Arrumi Jose</h2>
-                        <p class="struktur-organisasi-class">VII-BIL2</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid6/7Bil1_Made Dravin A. N. _Anggota Sekbid 6.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 6</div>
+                            <h2 class="struktur-organisasi-name">Made Dravin A.N.</h2>
+                            <p class="struktur-organisasi-class">VII-BIL1</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid6/7F_Lakeisha Kataleya A._anggota sekbid 6.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 6</div>
+                            <h2 class="struktur-organisasi-name">Lakeisha Kataleya A.</h2>
+                            <p class="struktur-organisasi-class">VII-F</p>
+                        </div>
+                    </div>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid6/7BIL2_Kama Arrumi Jose_Anggota Sekbid 6.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 6</div>
+                            <h2 class="struktur-organisasi-name">Kama Arrumi Jose</h2>
+                            <p class="struktur-organisasi-class">VII-BIL2</p>
+                        </div>
                     </div>
                 </div>
             </div>
