--- a/sekbid7.html
+++ b/sekbid7.html
@@ -83,60 +83,74 @@
     <div class="gradient-circle gradient-top-left"></div>
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
-        <h1>SEKBID 7</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <h1>SEKBID 7 - Sastra Budaya Lokal dan Internasional</h1>
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/OSIS/sekbid7-logo.png" alt="Logo Sekbid 7 SMP Taruna Bakti">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid7/8BIL1_Yura Khairan B.P._Ketua Sekbid 7.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Ketua Sekbid 7</div>
-                        <h2 class="struktur-organisasi-name">Yura Khairan B.P</h2>
-                        <p class="struktur-organisasi-class">VIII-BIL1</p>
-                    </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid7/8BIL2_Kyra Sakura_Wakil Ketua Sekbid 7.jpg" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 7</div>
-                        <h2 class="struktur-organisasi-name">Kyra Sakura</h2>
-                        <p class="struktur-organisasi-class">VIII-BIL2</p>
-                    </div>
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li><strong>Culture Day</strong> - Acara ini akan dilaksanakan pada tanggal 21 Mei dalam rangka memperingati "World Day of Culture Diversity" yang berisi lomba lomba yang bertemakan budaya.</li>
+                        <li><strong>Expo Budaya Internasional</strong> - Expo Budaya ini akan memperlihatkan budaya dari beberapa negara luar yang ada di Culture Day. Booth paling menarik dan informatif akan kemudian dibawa untuk diperlihatkan saat Home Concert nanti.</li>
+                        <li><strong>Bazaar/Market Stall</strong> - Bazaar/Market Stall menjual makanan tradisional dan internasional seperti lemper dan batagor, dll. untuk tradisional, dan hotdogs atau sushi dll. untuk internasional.</li>
+                        <li><strong>Hari Sastra Nasional</strong> - Hari Satra Nasional adalah acara yang akan diselenggarakan setiap 3 Juli berisi lomba-lomba yang bisa diikuti semua siswa/i SMP TB.</li>
+                        <li><strong>Satgas Literasi</strong> - Satgas Literasi bertujuan untuk memimpin kegiatan literasi terutama di Lapangan. Bukan hanya itu, satgas memastikan semua kelas (Yang literasi di lapangan) mengikuti kegiatan literasi di lapangan.</li>
+                    </ul>
                 </div>
             </div>
-            <div class="struktur-organisasi-horizontal">
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid7/8D_Melodihati indria Putri_Anggota sekbid 7.png" alt="Student Photo">
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid7/8BIL1_Yura Khairan B.P._Ketua Sekbid 7.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Ketua Sekbid 7</div>
+                            <h2 class="struktur-organisasi-name">Yura Khairan B.P</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL1</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 7</div>
-                        <h2 class="struktur-organisasi-name">Melodihati indria P.</h2>
-                        <p class="struktur-organisasi-class">VIII-D</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid7/8BIL2_Kyra Sakura_Wakil Ketua Sekbid 7.jpg" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 7</div>
+                            <h2 class="struktur-organisasi-name">Kyra Sakura</h2>
+                            <p class="struktur-organisasi-class">VIII-BIL2</p>
+                        </div>
                     </div>
                 </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid7/7G_Maisha Kirana_Anggota Sekbid 7 (2).png" alt="Student Photo">
+                <div class="struktur-organisasi-horizontal">
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid7/8D_Melodihati indria Putri_Anggota sekbid 7.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 7</div>
+                            <h2 class="struktur-organisasi-name">Melodihati indria P.</h2>
+                            <p class="struktur-organisasi-class">VIII-D</p>
+                        </div>
                     </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 7</div>
-                        <h2 class="struktur-organisasi-name">Maisha Kirana</h2>
-                        <p class="struktur-organisasi-class">VII-G</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid7/7G_Maisha Kirana_Anggota Sekbid 7 (2).png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 7</div>
+                            <h2 class="struktur-organisasi-name">Maisha Kirana</h2>
+                            <p class="struktur-organisasi-class">VII-G</p>
+                        </div>
                     </div>
-                </div>
-                <div class="struktur-organisasi-card">
-                    <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid7/7Bil1_Azkayra Keeyash V._AnggotaSekbid7.png" alt="Student Photo">
-                    </div>
-                    <div class="struktur-organisasi-card-content">
-                        <div class="struktur-organisasi-badge">Anggota Sekbid 7</div>
-                        <h2 class="struktur-organisasi-name">Azkayra Keeyash V.</h2>
-                        <p class="struktur-organisasi-class">VII-BIL1</p>
+                    <div class="struktur-organisasi-card">
+                        <div class="struktur-organisasi-card-header">
+                            <img src="assets/images/OSIS/sekbid7/7Bil1_Azkayra Keeyash V._AnggotaSekbid7.png" alt="Student Photo">
+                        </div>
+                        <div class="struktur-organisasi-card-content">
+                            <div class="struktur-organisasi-badge">Anggota Sekbid 7</div>
+                            <h2 class="struktur-organisasi-name">Azkayra Keeyash V.</h2>
+                            <p class="struktur-organisasi-class">VII-BIL1</p>
+                        </div>
                     </div>
                 </div>
             </div>
