--- a/sekbid8.html
+++ b/sekbid8.html
@@ -83,10 +83,23 @@
     <div class="gradient-circle gradient-top-left"></div>
     <div class="gradient-circle gradient-bottom-right"></div>
     <section class="struktur-organisasi-section">
-        <h1>SEKBID 8</h1>
-        <div class="struktur-organisasi-vertical">
-            <div class="struktur-organisasi-horizontal">
+        <h1>SEKBID 8 - Teknologi dan Informasi</h1>
+        <div class="struktur-organisasi-container">
+            <div class="sekbid-description">
                 <img class="struktur-organisasi-logo" src="assets/images/OSIS/sekbid8-logo.png" alt="Logo Sekbid 8 SMP Taruna Bakti">
+                <div class="sekbid-highlights">
+                    <h3>Proker:</h3>
+                    <ul>
+                        <li><strong>Dokumentasi Kegiatan OSISMPK</strong> - Mengambil foto dan video kegiatan selama acara berlangsung yang nantinya akan dikumpulkan ke dalam G-Drive.</li>
+                        <li><strong>Publikasi Kegiatan OSISMPK</strong> - Mendesain feeds dan story template acara yang nanti akan diunggah pada akun instagram resmi OSISMPK SMP TB.</li>
+                        <li><strong>Organigram OSISMPK</strong> - Proker ini dilaksanakan dengan membuat organigram OSISMPK dengan tampilan yang menarik dan informatif yang akan diunggah pada akun instagram OSISMPK.</li>
+                        <li><strong>TarbakRecap</strong> - Membuat video recap acara yang berisi dengan kegiatan-kegiatan acara dari awal hingga akhir. Video akan diunggah ke akun instagram OSISMPK bersamaan dengan feeds acara tersebut.</li>
+                        <li><strong>EduSpark</strong> - Bekerjasama dengan sekbid lain untuk mengangkat topik tentang masalah di sekitaran kita, kemudian membuat poster tentang topik tersebut yang akan diunggah pada story instagram OSISMPK.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="struktur-organisasi-vertical">
+                <div class="struktur-organisasi-horizontal">
                 <div class="struktur-organisasi-card">
                     <div class="struktur-organisasi-card-header">
                         <img src="assets/images/OSIS/sekbid8/8BIL2_Kamea Amabel S._Ketua Sekbid 8.png" alt="Student Photo">
@@ -129,6 +142,8 @@
                         <p class="struktur-organisasi-class">VII-E</p>
                     </div>
                 </div>
+            </div>
+            <div class="struktur-organisasi-horizontal">
                 <div class="struktur-organisasi-card">
                     <div class="struktur-organisasi-card-header">
                         <img src="assets/images/OSIS/sekbid8/7C_Allura Kalika Fatriananda_Anggota Sekbid 8.png" alt="Student Photo">
@@ -139,6 +154,7 @@
                         <p class="struktur-organisasi-class">VII-C</p>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </section>
