--- a/struktur-organisasi.html
+++ b/struktur-organisasi.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="struktur-organisasi-vertical" id="strukturContainer">
-            <!-- Content will be dynamically loaded by structure.js -->
+            <!-- Contents will be dynamically loaded by structure.js -->
         </div>
     </section>
 
@@ -104,7 +104,7 @@
             
             <div class="carousel-wrapper">
                 <div class="carousel-track" id="carouselTrack">
-                    <!-- Content will be dynamically loaded by structure.js -->
+                    <!-- Contents will be dynamically loaded by structure.js -->
                 </div>
             </div>
             
