--- a/sekbid1.html
+++ b/sekbid1.html
@@ -169,6 +169,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.js" data-kegiatan-location="data/kegiatan.txt"></script>
 </body>
 </html>
