--- a/sekbid6.html
+++ b/sekbid6.html
@@ -178,6 +178,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.js" data-kegiatan-location="data/kegiatan.txt"></script>
 </body>
 </html>
